--- a/report/pers_sched/latex/biometrics_submission/replyletter-2/ref2_resp.tex
+++ b/report/pers_sched/latex/biometrics_submission/replyletter-2/ref2_resp.tex
@@ -1,6 +1,6 @@
     % !TEX root = reply_letter.tex
     \section*{Response to 2nd Referee's Comments}
-    We would like to thank the Referee for his/her constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in Sections~5 and 6, Web Appendix A, C, D and E. In addition, changes regarding the specific comments have been made throughout the text.
+    We would like to thank the Referee for his/her constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in Sections~5 and 6, Web Appendix C, D and E. In addition, changes regarding the specific comments have been made throughout the text.
 
     You may find below our responses to the specific issues raised.
 
@@ -83,7 +83,7 @@ of latest biopsy.}
     \begin{table}
     \centering
     \captionsetup{font=scriptsize}
-    \caption{Estimated mean and standard deviation, of the number of biopsies $N^S_j$ conducted until Gleason reclassification (GR) is detected, and of the offset $O^S_j$ (difference in time at which GR is detected and the true time of GR, in months), for the simulated (500 datasets) test patients, across different schedules and subgroups. Patients in subgroup $G_1$ have the fastest prostate cancer progression rate, whereas patients in subgroup $G_3$ have the slowest progression rate. Types of personalized schedules (full names in brackets): Exp. GR Time (expected time of GR), Med. GR Time (median time of GR), Dyn. risk GR (schedules based on dynamic risk of GR), Hybrid (a hybrid approach between median time of GR and dynamic risk of GR). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol.}
+    \caption{Estimated mean and standard deviation (SD), of the number of biopsies $N^S_j$ conducted until Gleason reclassification (GR) is detected, and of the offset $O^S_j$ (difference in time at which GR is detected and the true time of GR, in months), for the simulated (500 datasets) test patients, across different schedules and subgroups. Patients in subgroup $G_1$ have the fastest prostate cancer progression rate, whereas patients in subgroup $G_3$ have the slowest progression rate. Types of personalized schedules (full names in brackets): Exp. GR Time (expected time of GR), Med. GR Time (median time of GR), Dyn. risk GR (schedules based on dynamic risk of GR), Hybrid (a hybrid approach between median time of GR and dynamic risk of GR). Annual corresponds to a schedule of yearly biopsies and PRIAS corresponds to biopsies as per PRIAS protocol.}
     \label{table : sim_study_pooled_estimates}
     \begin{tabular}{lrrrr}
     \Hline
