--- a/report/pers_sched/latex/biometrics_submission/after-acceptance-finalmaterial/main_manuscript.tex
+++ b/report/pers_sched/latex/biometrics_submission/after-acceptance-finalmaterial/main_manuscript.tex
@@ -15,8 +15,8 @@
 %  as are almost all equations in the journal.  Use a recent version of the
 %  journal as a guide. 
 %  
-%\documentclass[useAMS,usenatbib, referee]{biom}
-\documentclass[useAMS, usenatbib]{biom}
+\documentclass[useAMS,usenatbib, referee]{biom}
+%\documentclass[useAMS, usenatbib]{biom}
 %
 %  If your system does not have the AMS fonts version 2.0 installed, then
 %  remove the useAMS option.
@@ -214,7 +214,7 @@ Accepted March} 0000.}
 %This is the summary for this paper.
 %\end{abstract}
 
-\input{mainmatter/abstract}
+\input{abstract}
 
 %  Please place your key words in alphabetical order, separated
 %  by semicolons, with the first letter of the first word capitalized,
@@ -248,13 +248,13 @@ Accepted March} 0000.}
 %  Please DO NOT attempt to reformat the style of equation numbering!
 %  For that matter, please do not attempt to redefine anything!
 
-\input{mainmatter/introduction}
-\input{mainmatter/joint_model_framework}
-\input{mainmatter/pers_sched_framework/pers_biopsy_framework}
-\input{mainmatter/choosing_schedule}
-\input{mainmatter/pers_schedule_prias}
-\input{mainmatter/sim_study}
-\input{mainmatter/discussion}
+\input{introduction}
+\input{joint_model_framework}
+\input{pers_biopsy_framework}
+\input{choosing_schedule}
+\input{pers_schedule_prias}
+\input{sim_study}
+\input{discussion}
 \section{Supplementary Materials}
 
 Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Section~\ref{subsec : estimation}, and Section~\ref{sec : pers_schedule_PRIAS}, respectively, and the R code for fitting the joint model to the PRIAS dataset, and for the simulation study are available with this paper at the Biometrics website on Wiley Online Library.
@@ -271,7 +271,7 @@ Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Sect
 %  This section is optional.  Here is where you will want to cite
 %  grants, people who helped with the paper, etc.  But keep it short!
 
-\input{mainmatter/acknowledgement}
+\input{acknowledgement}
 
 %  If your paper refers to supplementary web material, then you MUST
 %  include this section!!  See Instructions for Authors at the journal
